# qmmp-xmdx

./: README.md  decodermdxfactory.cpp  decodermdxfactory.h  decoderxmdxfactory.cpp  decoderxmdxfactory.h  mdx.pro  mdxhelper.cpp  xmdx.pro  xmdxhelper.cpp
libmdx/mdxmini/: mdxmini.c  mdxmini.h
libmdx/mucom88/: adpcm.cpp  cmucom.cpp  cmucom.h  main.cpp  membuf.cpp  mucomvm.cpp
libmdx/mucom88/Z80/: Z80.cpp
libmdx/mucom88/bin_em/: bin_expand_em.h  bin_kbd_em.h  bin_msub_em.h  bin_music_em.h
libmdx/mucom88/module/: mucom_module.h
libmdx/mucom88/utils/: fade.cpp  fade.h  mucomtag.h
libmdx/pdxmini/: pdxmini.cpp  pdxmini.h
libmdx/pmdmini/: pmdmini.c  pmdmini.cpp  pmdmini.h
libmdx/pmdmini/fmgen/: psg.cpp
libmdx/pmdmini/pmdwin/: compat.h  pmdwin.cpp  pmdwin.h
libmdx/vgs/: miniz.c  vgsdec.h
libxmdx/: CMakeLists.txt
libxmdx/mdxmini/: mdx.h  mdxfile.c  mdxmini.c
libxmdx/mucom88/: main.cpp  mucom88config.h  mucomvm.h
libxmdx/mucom88/bin_em/: bin_muc88_em.h
libxmdx/mucom88/module/: mucom_module.cpp
libxmdx/mucom88/utils/: mucomtag.cpp
libxmdx/pmdmini/pmdwin/: pmdwin.cpp
libxmdx/vgs/: vgsdec.c  vgsdec_internal.h  vgsmml.c  vgsmml.h
